--- a/guestbook-kustomize/overlays/dev/deployment-patch.yaml
+++ b/guestbook-kustomize/overlays/dev/deployment-patch.yaml
@@ -1,12 +1,11 @@
----
-- op: replace
-  path: /metadata/name
-  value: guestbook-dev
-
-- op: replace
-  path: /spec/replicas
-  value: 2
-
-- op: replace
-  path: /spec/template/spec/containers/0/image
-  value: nginx:1.25
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx
+spec:
+  replicas: 1
+  template:
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:1.21
