--- a/guestbook-kustomize/applicationset.yaml
+++ b/guestbook-kustomize/applicationset.yaml
@@ -17,7 +17,7 @@ spec:
       source:
         repoURL: https://github.com/BBrucelee2002/guest-app-gitops-.git
         targetRevision: HEAD
-        path: overlays/{{env}}
+        path: guestbook-kustomize/overlays/{{env}}
       destination:
         server: https://kubernetes.default.svc
         namespace: guestbook-{{env}}
